--- a/loginstyle.css
+++ b/loginstyle.css
@@ -16,7 +16,29 @@ body {
 
 .wrapper {
     width: 500px;
-    background-color: mintcream;
+    background-color: blue;
     color: white;
 
+}
+
+.wrapper h1 {
+    font-size: 36px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+
+}
+
+.wrapper input-box {
+    width: 100%;
+    height: 50%;
+    background-color: salmon;
+    margin: 30px;
+}
+
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
 }
