--- a/loginstyle.css
+++ b/loginstyle.css
@@ -38,7 +38,8 @@ body {
 .input-box input{
     width: 100%;
     height: 50px;
-    background: transparent;
+    background-color: white;
     border: none;
-    outline: none;
+    outline: black;
+    border-radius: 40px;
 }
