--- a/loginstyle.css
+++ b/loginstyle.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-famiy: "Arial";
+    font-style: "Arial";
 }
 
 body {
@@ -37,9 +37,9 @@ body {
 
 .input-box input{
     width: 100%;
-    height: 50px;
-    background-color: white;
+    height: 25px;
+    background: transparent;
     border: none;
     outline: black;
-    border-radius: 40px;
+    border-radius: 80px;
 }
