--- a/loginstyle.css
+++ b/loginstyle.css
@@ -35,11 +35,52 @@ body {
     margin: 30px;
 }
 
-.input-box input{
+.input-box input {
     width: 100%;
     height: 25px;
     background: transparent;
     border: none;
-    outline: black;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 80px;
+    font-size: 16px;
+    color: white;
+    padding: 20px 45px 20px 20px;
+
+}
+
+.wrapper .remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;   
+}
+
+.remember-forgot label input {
+    accent-color: white;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: white;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: white;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: gray;
+    font-weight: 600;
+    
 }
