--- a/loginstyle.css
+++ b/loginstyle.css
@@ -18,12 +18,14 @@ body {
     width: 500px;
     background-color: blue;
     color: white;
+    border-radius: 100px;
+    padding: 30px 40px;
 
 }
 
 .wrapper h1 {
     font-size: 36px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial Narrow;
     text-align: center;
 
 }
@@ -32,20 +34,28 @@ body {
     width: 100%;
     height: 50px;
     background-color: salmon;
-    margin: 30px;
+    margin: 30px 0;
 }
 
 .input-box input {
     width: 100%;
-    height: 25px;
+    height: 100%;
     background: transparent;
     border: none;
     outline: none;
     border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 80px;
+    border-radius: 40px;
     font-size: 16px;
     color: white;
     padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder{
+    color: white;
+}
+
+.input-box i{
+    position: absolute;
 
 }
 
@@ -82,5 +92,5 @@ body {
     font-size: 16px;
     color: gray;
     font-weight: 600;
-    
+
 }
