--- a/loginstyle.css
+++ b/loginstyle.css
@@ -64,6 +64,7 @@ body {
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;   
+    padding: 20px 45px 20px 20px;
 }
 
 .remember-forgot label input {
